# argus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.md  argus.toml.example  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  backend.rs  bitbucket.rs  config.rs  github.rs  i18n.rs  main.rs  markdown.rs  theme.rs  ui.rs  update.rs
